# PCD

./: .gitignore  COMPREHENSIVE_TEST_RESULTS.md  ENHANCED_CANDY_POOL_SYSTEM.md  FINAL_PRODUCTION_TEST.md  GAMEPLAY_FIXES_SUMMARY.md  GAME_ENHANCEMENT_PRD.md  GAME_NOW_WORKING.md  ONLINE_MULTIPLAYER_TESTING_GUIDE.md  P2P_INTEGRATION_GUIDE.md  PCD PRD.md  PCD design PRD.md  PRD.md  PRD_COMPLIANCE_ANALYSIS.md  PRD_COMPLIANCE_TEST_RESULTS.md  PRD_IMPLEMENTATION_PLAN.md  PRD_IMPLEMENTATION_STATUS.md  PRODUCTION_ROADMAP.md  PROFILE_FEEDBACK_IMPLEMENTATION.md  QA_TEST_REPORT.md  README.md  SYSTEM_AUDIT.md  USER_TESTING_READY.md  api_test_fixed.py  comprehensive_test.py  deploy.sh  docker-compose.yml  final_game_test.py  instruction.md  prd-game-pcd.md  quick_qa_test.py  simulate_match.py  start_fullstack.sh  start_servers.sh  test_enhanced_candy_pool.html  universal_candy_test.html  universal_game_logic_demo.html
backend-rust/: .env.example  Cargo.toml  README.md
backend-rust/migrations/: 001_initial_schema.sql  002_transactions.sql  003_audit_logs.sql  004_security_hardening.sql  005_high_assurance_online_mode.sql  006_elo_matchmaking.sql  007_claimed_quests.sql
backend-rust/src/: config.rs  error.rs  lib.rs  main.rs
backend-rust/src/db/: mod.rs  models.rs  postgres.rs  redis.rs
backend-rust/src/game/: engine.rs  mod.rs  state.rs  types.rs
backend-rust/src/middleware/: auth.rs  mod.rs  rate_limit.rs  security.rs
backend-rust/src/routes/: ai.rs  auth.rs  config.rs  game.rs  matchmaking.rs  mod.rs  oauth.rs  users.rs
backend-rust/tests/: game_engine_test.rs
(+181 files in other folders)
